<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 The MoKee Open Source Project

     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- App Main -->
    <string name="app_name">MoKee Center</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MoKee Open Source</string>
    <string name="nav_header_subtitle">Android Community Operating System</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Action -->
    <string name="action_faq">Q&amp;A</string>
    <string name="action_solution">Solution</string>
    <string name="action_next">Next</string>
    <string name="action_pause">Pause</string>
    <string name="action_resume">Resume</string>
    <string name="action_download">Download</string>

    <!-- Menu -->
    <string name="menu_preferences">Preferences</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_donation">Donation</string>
    <string name="menu_unlock_features">Unlock Features</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_delete_update">Delete</string>

    <!-- Preference -->
    <string name="pref_auto_delete_updates">Delete updates when installed or deprecated</string>
    <string name="pref_ab_perf_mode">Prioritize update process</string>
    <string name="pref_mobile_data_warning">Warning if on mobile data</string>

    <!-- Nav Main -->
    <string name="nav_main_forum_title">Forum</string>
    <string name="nav_main_guide_title">Guide</string>
    <string name="nav_main_source_title">Source Code</string>
    <string name="nav_main_bug_reports_title">Bug Reports</string>
    <!-- Nav Social -->
    <string name="nav_social_title">Social Media</string>
    <string name="nav_social_telegram_title">Telegram</string>
    <string name="nav_social_weibo_title">Weibo</string>
    <string name="nav_social_google_plus_title">Google+</string>
    <string name="nav_social_qqchat_title">QQ Group</string>
    <!-- Nav Contribute -->
    <string name="nav_contribute_title">Contribute</string>
    <string name="nav_contribute_code_title">Code</string>
    <string name="nav_contribute_translate_title">Translation</string>

    <!-- Preference list -->
    <string name="mokee_information_title">Version Info</string>
    <string name="mokee_version_title">MoKee Version</string>
    <string name="unique_id_title">Unique ID</string>
    <string name="last_update_check_title">Last check</string>
    <string name="update_settings_title">Update Settings</string>
    <string name="incremental_updates_title">Incremental updates</string>
    <string name="incremental_updates_summary">Get incremental updates to save download time and bandwidth</string>
    <string name="verified_updates_title">Verified updates</string>
    <string name="verified_updates_summary">Only display updates that are verified by other users</string>
    <string name="available_updates_title">Available updates</string>
    <string name="no_available_updates_intro">The last check did not find any available updates. To manually check for new updates, use the Refresh button.</string>
    <string name="pending_available_updates_intro">Looking for available updates</string>

    <!-- Unlock Features -->
    <string name="unlock_features_title">Unlock features</string>
    <string name="unlock_features_incremental_updates_title">Donate %d CNY to unlock incremental updates and download at full speed.</string>
    <string name="unlock_features_verified_updates_title">Donate %d CNY for verified updates and remove Google Ads.</string>
    <string name="unlock_features_all_title">Donate %d CNY to unlock incremental updates, download at full speed, verified updates and remove Google Ads.</string>
    <string name="unlock_features_request_summary">(available after donating %d CNY)</string>
    <string name="unlock_features_pending_summary">(donated %1$d CNY, available for lifetime after donating %2$d CNY more)</string>

    <!-- Incremental Updates -->
    <string name="incremental_updates_not_support_summary">Incremental updates to this version are not supported.</string>
    <string name="incremental_updates_supported_full_summary">Incremental updates can save %s</string>
    <string name="incremental_updates_supported_ota_summary">Saves %s when compared to full ROM</string>

    <!-- Update Type -->
    <string name="update_type_title">Update type</string>
    <string name="update_type_release">Release</string>
    <string name="update_type_history">History</string>
    <string name="update_type_experimental">Experimental</string>
    <string name="update_type_nightly">Nightly</string>
    <string name="update_type_unofficial">Unofficial</string>

    <!-- Donation Info -->
    <string name="donation_record_title">Donation record</string>
    <string name="donation_record_without_rank">You donated a total of %1$d CNY.</string>
    <string name="donation_record_with_rank">You donated a total of %1$d CNY, more than %2$s of donors globally, rank No.%3$d!</string>
    <string name="donation_record_none">You haven\'t donated</string>
    <string name="donation_restore_success">The donation record was restored successfully!</string>
    <string name="donation_restore_failure">Please check your internet connection and try again later.</string>
    <string name="donation_restore_not_found">No donation record found.</string>
    <string name="donation_payment_success">Thank you for your donation!</string>
    <string name="donation_payment_currency" translatable="false">%d CNY</string>
    <string name="donation_dialog_title">Donate to MoKee Open Source</string>
    <string name="donation_dialog_message">MoKee Open Source is a purely non-profit project born of hobby and passion. In order to maintain this project, we have to fork out our own money most of the time or rely on donations and advertisements. Your donations can help reduce our financial load and sustain future development!</string>
    <string name="donation_dialog_message_extra">After donating, we will activate certain features which are only available to donors for life!</string>

    <!-- Snackbar Update -->
    <string name="updates_found">New updates found</string>
    <string name="no_updates_found">No new updates found</string>
    <string name="updates_check_failed">The update check failed. Please check your internet connection and try again later.</string>

    <!-- Common -->
    <string name="text_copied">Text copied to clipboard.</string>
    <string name="unknown">Unknown</string>
    <string name="never">Never</string>
    <string name="alipay">AliPay</string>
    <string name="wechat">WeChat</string>
    <string name="paypal">PayPal</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="payment_not_found">MoKee Payment isn\'t installed.</string>

    <!-- Notification -->
    <string name="new_updates_channel_title">New updates</string>
    <string name="new_updates_found_title">New system updates</string>
    <string name="ongoing_channel_title">Ongoing downloads</string>

    <!-- Download Status -->
    <string name="downloading_notification">Downloading</string>
    <string name="download_starting_notification">Starting download</string>
    <string name="download_paused_notification">Download paused</string>
    <string name="download_waiting_network_notification">Waiting for network</string>
    <string name="download_completed_notification">Download completed</string>
    <string name="download_verification_failed_notification">Failed to verify update package, please download again</string>
    <string name="download_file_not_found_notification">Download link expired, please click the Refresh button and try again</string>
    <string name="download_remaining"><xliff:g example="3 minutes" id="duration">%s</xliff:g> left</string>
    <string name="download_speed">%1$s, %2$s/s</string>
    <string name="download_already_running">A download is already running</string>
    <string name="download_progress_new" translatable="false"><xliff:g example="12.2" id="filesize_without_unit">%1$s</xliff:g> / <xliff:g example="310 MB" id="filesize_without_unit">%2$s</xliff:g> • <xliff:g example="56" id="percentage">%3$s</xliff:g></string>
    <string name="download_progress_eta_new" translatable="false"><xliff:g example="12.2" id="filesize_without_unit">%1$s</xliff:g> / <xliff:g example="310 MB" id="filesize_without_unit">%2$s</xliff:g> (<xliff:g example="3 minutes left, 1.56 MB/s" id="eta">%3$s</xliff:g>) • <xliff:g example="56" id="percentage">%4$s</xliff:g></string>
    <string name="download_limited_mode">Downloading at limited speed, please donate 30 CNY to enjoy full speed.</string>

    <!-- Mobile data -->
    <string name="update_on_mobile_data_title">Warning</string>
    <string name="update_on_mobile_data_message">You\'re about to download an update package using mobile data which is likely going to cause high data usage. Would you like to proceed?</string>
    <string name="checkbox_mobile_data_warning">Do not show again</string>

    <!-- Battery check -->
    <string name="dialog_battery_low_title">Low battery</string>
    <string name="dialog_battery_low_message_pct">The battery level is too low, you need at least <xliff:g id="percent_discharging">%1$d</xliff:g>%% of battery to continue, <xliff:g id="percent_charging">%2$d</xliff:g>%% if charging.</string>

    <!-- Apply update -->
    <string name="apply_update_dialog_title">Apply update</string>
    <string name="apply_update_dialog_message">You are about to upgrade to <xliff:g id="update_name">%1$s</xliff:g>.\n\nIf you press <xliff:g id="ok">%2$s</xliff:g>, the device will restart itself in recovery mode to install the update.\n\nNote: This feature requires a compatible Recovery or updates will need to be installed manually.</string>

</resources>