<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 The MoKee Open Source Project

     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/mokee_information_title">

        <com.mokee.center.preference.VersionPreference android:title="@string/mokee_version_title" />

        <com.mokee.center.preference.UniqueIDPreference android:title="@string/unique_id_title" />

        <com.mokee.center.preference.DonationRecordPreference
            android:key="donation_record"
            android:title="@string/donation_record_title" />

        <com.mokee.center.preference.LastUpdateCheckPreference
            android:key="last_update_check"
            android:title="@string/last_update_check_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/update_settings_title">
        <com.mokee.center.preference.UpdateTypePreference
            android:dependency="incremental_updates"
            android:key="update_type"
            android:title="@string/update_type_title" />
        <com.mokee.center.preference.IncrementalUpdatesPreference
            android:disableDependentsState="true"
            android:key="incremental_updates"
            android:title="@string/incremental_updates_title" />
        <com.mokee.center.preference.VerifiedUpdatesPreference
            android:key="verified_updates"
            android:title="@string/verified_updates_title" />
    </PreferenceCategory>

    <com.mokee.center.preference.AvailableUpdatesPreferenceCategory
        android:key="updates_category"
        android:title="@string/available_updates_title" />

</PreferenceScreen>