<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 The MoKee Open Source Project

     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_forum"
            android:icon="@drawable/ic_nav_forum"
            android:title="@string/nav_main_forum_title" />
        <item
            android:id="@+id/nav_bug_reports"
            android:icon="@drawable/ic_nav_bug_reports"
            android:title="@string/nav_main_bug_reports_title" />
        <item
            android:id="@+id/nav_open_source"
            android:icon="@drawable/ic_nav_open_source"
            android:title="@string/nav_main_source_title" />
    </group>

    <item android:title="@string/nav_contribute_title">
        <menu>
            <item
                android:id="@+id/nav_code_review"
                android:icon="@drawable/ic_nav_code_review"
                android:title="@string/nav_contribute_code_title" />
            <item
                android:id="@+id/nav_translate"
                android:icon="@drawable/ic_nav_translate"
                android:title="@string/nav_contribute_translate_title" />
        </menu>
    </item>

    <item android:title="@string/nav_social_title">
        <menu>
            <item
                android:id="@+id/nav_weibo"
                android:icon="@drawable/ic_nav_weibo"
                android:title="@string/nav_social_weibo_title" />
            <item
                android:id="@+id/nav_qqchat"
                android:icon="@drawable/ic_nav_qqchat"
                android:title="@string/nav_social_qqchat_title" />
            <item
                android:id="@+id/nav_telegram"
                android:icon="@drawable/ic_nav_telegram"
                android:title="@string/nav_social_telegram_title" />
        </menu>
    </item>
</menu>
