<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 The MoKee Open Source Project

     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_donation"
        android:title="@string/menu_donation"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/menu_refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_restore"
        android:title="@string/menu_restore" />

    <item
        android:id="@+id/menu_preferences"
        android:orderInCategory="100"
        android:title="@string/menu_preferences"
        app:showAsAction="never" />


</menu>
